Jenkins file updated with QG stage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
 sonar.organization=kodalib4u-key
 sonar.projectKey=kodalib4u-key_newproject
-sonar.projectName=tweet-trend-new
+sonar.projectName=newproject
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
